# docs/swagger.json
@@ -30,6 +30,15 @@
                     "tracks"
                 ],
                 "summary": "Get details of all music tracks by artist",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Artist",
+                        "name": "artist",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -50,6 +59,15 @@
                     "tracks"
                 ],
                 "summary": "Create music tracks metadata",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ISRC",
+                        "name": "isrc",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -70,6 +88,15 @@
                     "tracks"
                 ],
                 "summary": "Get details of all music tracks",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ISRC",
+                        "name": "isrc",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
